--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,5 @@ websockets==12.0
 redis==5.0.1
 pydantic==1.10.13
 httpx==0.25.2
-asyncpg==0.29.0
+asyncpg --only-binary=asyncpg
 psycopg2-binary==2.9.9
