--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.104.1
-uvicorn==0.24.0
+fastapi>=0.104.1
+uvicorn>=0.24.0
 sqlalchemy==2.0.23
 alembic==1.12.1
 python-multipart==0.0.6
@@ -8,7 +8,7 @@ passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 websockets==12.0
 redis==5.0.1
-pydantic==1.10.13
+pydantic>=1.10.13
 httpx==0.25.2
 asyncpg --only-binary=asyncpg
 psycopg2-binary==2.9.9
